# openclaw_voice

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  install.bat  pyproject.toml  requirements.txt  run.bat  voice_bridge.py  План Hardening.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  child_task.yml  config.yml  epic.yml  feature_request.yml
.github/workflows/: ci.yml  pr-hygiene.yml
docs/: ai-review-checklist.md  project-process.md  voice-architecture.md
openclaw_voice/: __init__.py  config.py  logging_setup.py  ports.py
openclaw_voice/adapters/: groqstt_adapter.py  realtimestt_adapter.py  stt_factory.py
openclaw_voice/app/: bridge_runner.py
openclaw_voice/clients/: openclaw_client.py
openclaw_voice/services/: speech_shaper.py  tts_providers.py  tts_service.py
scripts/: run_quality_gates.py  smoke_test_voice.ps1  smoke_test_voice.py
tests/: test_bootstrap_and_adapter.py  test_bridge_session.py  test_bridge_state.py  test_config.py  test_conversation_policy.py  test_groq_adapter.py  test_openclaw_client.py  test_packaging.py  test_stt_factory.py  test_tts_providers.py  test_tts_service.py
